# rust_rest2

./: Cargo.toml  contacts.sqlite
src/: main.rs
