[package]
name = "rust_rest2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled", "csvtab"] }
rocket_cors = "0.5.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
